# Chip8_Emulator

./: CMakeLists.txt  Chip8.cpp  Chip8.h  Platform.cpp  README.md  main.cpp
